[gd_scene load_steps=10 format=3 uid="uid://b8u1p14dtwv4j"]

[ext_resource type="Script" uid="uid://db2mvhlm1sjal" path="res://addons/AudioCafe/panel/audio_panel.gd" id="1_bf5yf"]
[ext_resource type="Texture2D" uid="uid://cqdc43xlhe2rl" path="res://addons/AudioCafe/icons/refresh-cw.svg" id="2_1kouy"]
[ext_resource type="Texture2D" uid="uid://cbagaxsdgndkc" path="res://addons/AudioCafe/icons/book-open-text.svg" id="2_1u6yf"]
[ext_resource type="Texture2D" uid="uid://onb63xl4bsnu" path="res://addons/AudioCafe/icons/audio-lines.svg" id="2_e2q5v"]
[ext_resource type="Texture2D" uid="uid://0kp7rnsg2l8y" path="res://addons/AudioCafe/icons/arrow-big-up-dash.svg" id="2_o1mfy"]
[ext_resource type="Texture2D" uid="uid://q7eh8tuodfrf" path="res://addons/AudioCafe/icons/shuffle.svg" id="6_e2q5v"]
[ext_resource type="Texture2D" uid="uid://c6olgtqpk02pc" path="res://addons/AudioCafe/icons/boxes.svg" id="7_ca2om"]
[ext_resource type="Texture2D" uid="uid://dyalvtx8j4x03" path="res://addons/AudioCafe/icons/clapperboard.svg" id="8_jwa4r"]
[ext_resource type="Texture2D" uid="uid://dx4rjbf0jt8pl" path="res://addons/AudioCafe/icons/x.svg" id="9_jwa4r"]

[node name="AudioPanel" type="VBoxContainer"]
offset_right = 333.0
offset_bottom = 363.0
script = ExtResource("1_bf5yf")

[node name="Audio-lines" type="Sprite2D" parent="."]
position = Vector2(110, 20)
texture = ExtResource("2_e2q5v")

[node name="HeaderButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
text = "AudioCafe"
icon = ExtResource("2_o1mfy")
flat = true
alignment = 0
icon_alignment = 2

[node name="CollapsibleContent" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 311)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CollapsibleContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GeneratePlaylists" type="Button" parent="CollapsibleContent/HBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Generates the key_playlist.tres file."
text = "Generate Playlists"
icon = ExtResource("2_1kouy")
autowrap_mode = 3

[node name="DocsButton" type="Button" parent="CollapsibleContent/HBoxContainer"]
custom_minimum_size = Vector2(78, 36)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Docs"
icon = ExtResource("2_1u6yf")

[node name="GenStatusLabel" type="Label" parent="CollapsibleContent"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CollapsibleContent"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CollapsibleContent"]
layout_mode = 2
size_flags_vertical = 0
current_tab = 0
tabs_rearrange_group = 0

[node name="Settings" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
custom_minimum_size = Vector2(0, 232)
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="AssetsPathsSection" type="VBoxContainer" parent="CollapsibleContent/TabContainer/Settings"]
layout_mode = 2

[node name="AssetsPathsLabel" type="Label" parent="CollapsibleContent/TabContainer/Settings/AssetsPathsSection"]
layout_mode = 2
text = "Assets Paths:"

[node name="AssetsPathsGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Settings/AssetsPathsSection"]
layout_mode = 2

[node name="AddAssetsPathButton" type="Button" parent="CollapsibleContent/TabContainer/Settings/AssetsPathsSection"]
layout_mode = 2
text = "Add Asset Path"

[node name="DistPathSection" type="VBoxContainer" parent="CollapsibleContent/TabContainer/Settings"]
layout_mode = 2

[node name="DistPathLabel" type="Label" parent="CollapsibleContent/TabContainer/Settings/DistPathSection"]
layout_mode = 2
text = "Dist / Playlists Path:"

[node name="DistPathGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Settings/DistPathSection"]
layout_mode = 2

[node name="AddDistPathButton" type="Button" parent="CollapsibleContent/TabContainer/Settings/DistPathSection"]
layout_mode = 2
text = "Add Dist Path"

[node name="Playlists" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 1

[node name="PlaylistGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Playlists"]
layout_direction = 2
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="Label" type="Label" parent="CollapsibleContent/TabContainer/Playlists/PlaylistGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "music_8-bit_jingles"

[node name="HBoxContainer" type="HBoxContainer" parent="CollapsibleContent/TabContainer/Playlists/PlaylistGridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CollapsibleContent/TabContainer/Playlists/PlaylistGridContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Randomized"
toggle_mode = true
icon = ExtResource("6_e2q5v")

[node name="Button2" type="Button" parent="CollapsibleContent/TabContainer/Playlists/PlaylistGridContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Syncronized"
toggle_mode = true
icon = ExtResource("7_ca2om")

[node name="Button3" type="Button" parent="CollapsibleContent/TabContainer/Playlists/PlaylistGridContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Interactive"
toggle_mode = true
icon = ExtResource("8_jwa4r")

[node name="Sync" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 2

[node name="SyncGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Sync"]
layout_direction = 2
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="Label" type="Label" parent="CollapsibleContent/TabContainer/Sync/SyncGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "music_8-bit_jingles"

[node name="Button" type="Button" parent="CollapsibleContent/TabContainer/Sync/SyncGridContainer"]
layout_mode = 2
tooltip_text = "Delete"
toggle_mode = true
icon = ExtResource("9_jwa4r")

[node name="Interactive" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 3

[node name="InteractiveGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Interactive"]
layout_direction = 2
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="Label" type="Label" parent="CollapsibleContent/TabContainer/Interactive/InteractiveGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "music_8-bit_jingles"

[node name="Button" type="Button" parent="CollapsibleContent/TabContainer/Interactive/InteractiveGridContainer"]
layout_mode = 2
tooltip_text = "Delete"
toggle_mode = true
icon = ExtResource("9_jwa4r")

[node name="AssetsFolderDialog" type="FileDialog" parent="CollapsibleContent"]
title = "Open a Directory"
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="DistFolderDialog" type="FileDialog" parent="CollapsibleContent"]
title = "Open a Directory"
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="SaveFeedbackLabel" type="Label" parent="CollapsibleContent"]
visible = false
layout_mode = 2
text = "Saved!"
horizontal_alignment = 1

[node name="SaveFeedbackTimer" type="Timer" parent="CollapsibleContent"]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="HeaderButton" to="." method="_on_header_button_pressed"]
[connection signal="pressed" from="CollapsibleContent/HBoxContainer/GeneratePlaylists" to="." method="_on_generate_playlists_pressed"]
[connection signal="pressed" from="CollapsibleContent/HBoxContainer/DocsButton" to="." method="_on_docs_button_pressed"]
[connection signal="pressed" from="CollapsibleContent/TabContainer/Settings/AssetsPathsSection/AddAssetsPathButton" to="." method="_on_add_assets_path_button_pressed"]
[connection signal="pressed" from="CollapsibleContent/TabContainer/Settings/DistPathSection/AddDistPathButton" to="." method="_on_add_dist_path_button_pressed"]
[connection signal="dir_selected" from="CollapsibleContent/AssetsFolderDialog" to="." method="_on_assets_folder_dialog_dir_selected"]
[connection signal="dir_selected" from="CollapsibleContent/DistFolderDialog" to="." method="_on_dist_folder_dialog_dir_selected"]
[connection signal="timeout" from="CollapsibleContent/SaveFeedbackTimer" to="." method="_on_save_feedback_timer_timeout"]
